@@ -209,9 +209,6 @@ class RendererImplementation : public IECore::Renderer
 
 		IECore::DataPtr  readArchiveCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
 
-		IECore::DataPtr objectBeginCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
-		IECore::DataPtr objectEndCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
-		IECore::DataPtr objectInstanceCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
 		IECore::DataPtr archiveRecordCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
 		IECore::DataPtr illuminateCommand( const std::string &name, const IECore::CompoundDataMap &parameters );
 
